# Rust

./: 1eraparte.txt  2dapart.txt  3raparte.txt  4taparte.txt  5taparte.txt  DEPENDENCIAS_Y_PASOS_BUILD.txt  GITHUB_ACTIONS_GUIDE.txt  VERSIONES_CORREGIDAS.txt  estrategia.txt  estructura.txt  planing.txt
.github/workflows/: build_android.yml  main.yml
rust_editor/: .gitignore  ANALISIS_IMPLEMENTACION.txt  Cargo.toml  DIAGNOSTICO_Y_CORRECCIONES.txt  INSTRUCCIONES_CORRECCION_RUST_EDITOR.txt  README.md  build.rs  build_android.sh
rust_editor/.cargo/: config.toml
rust_editor/.github/workflows/: build-android.yml  build_android.yml  main.yml
rust_editor/android/: AndroidManifest.xml
rust_editor/android/res/values/: strings.xml
rust_editor/android/res/xml/: file_paths.xml
rust_editor/docs/: README.md
rust_editor/examples/: scene_example.toml
rust_editor/logs_extracted/: 0_Build Android APK.txt
rust_editor/logs_extracted/Build Android APK/: system.txt
rust_editor/logs_nuevos/: 0_Build Android APK.txt
rust_editor/logs_nuevos/Build Android APK/: 10_Verify Setup.txt  11_Build ARM64.txt  1_Set up job.txt  2_Checkout.txt  32_Post Checkout.txt  33_Complete job.txt  3_Setup Rust.txt  4_Install System Dependencies.txt  5_Cache Cargo.txt  6_Setup Android SDK.txt  7_Install NDK.txt  8_Setup NDK Toolchain.txt  9_Configure Cargo for Android.txt  system.txt
rust_editor/logs_ultimos/: 0_Build Android APK.txt
rust_editor/logs_ultimos/Build Android APK/: 10_Verify Setup.txt  11_Build ARM64.txt  1_Set up job.txt  2_Checkout.txt  32_Post Checkout.txt  33_Complete job.txt  3_Setup Rust.txt  4_Install System Dependencies.txt  5_Cache Cargo.txt  6_Setup Android SDK.txt  7_Install NDK.txt  8_Setup NDK Toolchain.txt  9_Configure Cargo for Android.txt  system.txt
rust_editor/src/: lib.rs
rust_editor/src/animation/: animation.rs  mod.rs  timeline.rs
rust_editor/src/assets/: asset_manager.rs  mod.rs
rust_editor/src/core/: editor_app.rs  editor_state.rs  mod.rs  scene_manager.rs
rust_editor/src/ecs/: entity.rs  mod.rs  system.rs  world.rs
rust_editor/src/export/: exporter.rs  mod.rs
rust_editor/src/physics/: mod.rs  physics_world.rs
rust_editor/src/render/: mod.rs  raylib_backend.rs  render_backend.rs  wgpu_backend.rs
rust_editor/src/scripting/: behavior.rs  components.rs  mod.rs  node.rs  scene.rs
rust_editor/src/tilemap/: mod.rs  tilemap.rs  tileset.rs
rust_editor/src/ui/: editor_ui.rs  mod.rs  panels.rs
