[package]
name = "rust_editor"
version = "0.1.0"
edition = "2021"
authors = ["Tu Nombre <tu@email.com>"]
description = "Editor de juegos para Android con Rust + wgpu + egui"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "rust_editor"

[[bin]]
name = "editor_desktop"
path = "src/bin/editor_desktop.rs"

[features]
default = []

[dependencies]
# ============================================
# UI - egui (inmediato, ligero, multiplataforma)
# ============================================
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }

# ============================================
# Renderizado - wgpu (Vulkan/Metal/DirectX)
# ============================================
wgpu = { version = "0.20", optional = true, features = ["webgpu"] }
egui-wgpu = { version = "0.29", optional = true }

# ============================================
# Matemáticas
# ============================================
glam = "0.28"

# ============================================
# Serialización - TOML/JSON para scripting
# ============================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ron = "0.8"

# ============================================
# Logging y debugging
# ============================================
log = "0.4"
env_logger = "0.11"
android_logger = "0.14"

# ============================================
# Manejo de errores
# ============================================
anyhow = "1.0"
thiserror = "1.0"

# ============================================
# Utilidades
# ============================================
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
image = "0.25"

# ============================================
# Android específico
# ============================================
[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9"
ndk-context = "0.1"
android-activity = { version = "0.6", features = ["native-activity"] }

# ============================================
# Desktop específico (para desarrollo)
# ============================================
[target.'cfg(not(target_os = "android"))'.dependencies]
pollster = "0.3"

[dev-dependencies]
# Tests
criterion = "0.5"
mockall = "0.12"

# [[bench]]
# name = "render_benchmark"
# harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
# Para generación de código en build time si es necesario
